--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,8 +88,13 @@ p {
     margin-inline-end: 0px;
 }
 
-Edit{
-  
+.error_explanation {
+    width: 450px;
+    border: 2px solid red;
+    padding: 7px;
+    padding-bottom: 0;
+    margin-bottom: 20px;
+    background-color: #f0f0f0;
 }
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
