--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,16 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+<div class="error_explanation">
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+</div>
+
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
 <h4>Title</h4>
