--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,18 @@
  </table>
 
 <h2>New book</h2>
+
+<% if @book.errors.any? %>
+<div class="error_explanation">
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+</div>
+
 <%= form_with model: @book do |f| %>
   <label for="book_title">Title</label>
   <%= f.text_field :title %>
