--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,9 +19,9 @@
 <h4>Body</h4>
 <%= f.text_area :body %>
 
-<p><%= f.submit 'Upgrate Book' %></p>
+<p><%= f.submit 'Update Book' %></p>
 
 <% end %>
-<a><%= link_to "Show", book_path(@book) %></a>
+<%= link_to "Show", book_path(@book) %>
 |
 <a class="Back" href="/books">Back</a>
