--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,9 +14,9 @@
           <tr>
             <td><%= book.title %></td>
             <td><%= book.body %></td>
-            <td><%= link_to "Show", "books/#{book.id}" %></td>
-            <td><%= link_to "Edit", "books/#{book.id}/edit" %></td>
-            <td><%= link_to "Destroy","books/#{book.id}", method: :delete,"data-confirm" => "Are you sure？"  %></td>
+            <td><%= link_to "Show", "/books/#{book.id}" %></td>
+            <td><%= link_to "Edit", "/books/#{book.id}/edit" %></td>
+            <td><%= link_to "Destroy","/books/#{book.id}", method: :delete,"data-confirm" => "Are you sure？"  %></td>
             </tr>
             <% end %>
         </tbody>
@@ -25,7 +25,7 @@
 <h2>New book</h2>
 
 <% if @book.errors.any? %>
-<div class="error_explanation">
+
   <%= @book.errors.count %> errors prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
